# ChangeLog for dev-lang/perl
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/perl/ChangeLog,v 1.241 2007/03/07 22:22:23 wolf31o2 Exp $

  07 Mar 2007; Chris Gianelloni <wolf31o2@gentoo.org> perl-5.8.8-r2.ebuild:
  Change all instances of [ to [[.

  04 Mar 2007; Michael Cummings <mcummings@gentoo.org>
  +files/perl-5.8.8-asm-page-h-compile-failure.patch, perl-5.8.8-r2.ebuild:
  Bug 168312, patch from Peter for >=2.6.20 kernel headers.

  11 Feb 2007; Fabian Groffen <grobian@gentoo.org> perl-5.8.8-r2.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  11 Jan 2007; Michael Cummings <mcummings@gentoo.org> perl-5.8.8-r2.ebuild:
  Reverting changes made for bug 59328 until we can figure out why this breaks
  under catalyst

  09 Jan 2007; Michael Cummings <mcummings@gentoo.org> perl-5.8.8-r2.ebuild:
  Bug 144965, adjusted gcc patch line

  07 Jan 2007; Michael Cummings <mcummings@gentoo.org> perl-5.8.8-r2.ebuild:
  Bug 160623, mistakenly removed the else block for noman

  05 Jan 2007; Michael Cummings <mcummings@gentoo.org> perl-5.8.8-r2.ebuild:
  Bug 59328, features=noman support

  19 Nov 2006; Michael Cummings <mcummings@gentoo.org>
  +files/perl-5.8.8-gcc42-command-line.patch, perl-5.8.8-r2.ebuild:
  Bug 144965, gcc-4.2 bug/patch, patch provided by dirtyepic

  18 Nov 2006; Michael Cummings <mcummings@gentoo.org>
  -files/perl-5.8.7-CAN-2005-0448-rmtree.patch,
  -files/perl-5.8.7-regexp-nossp.patch, -files/perl-5.8.7-tempfiles.patch,
  -files/perl-exp_intwrap.patch, -files/perl-nonblock.patch,
  -files/perl-reorder-INC.patch, perl-5.8.8-r2.ebuild:
  Bug 150702; also cleaned up unused patches

  23 Oct 2006; Michael Cummings <mcummings@gentoo.org>
  -perl-5.8.7-r3.ebuild:
  Removing old perl

  17 Oct 2006; Roy Marples <uberlord@gentoo.org> perl-5.8.8-r2.ebuild:
  Added ~sparc-fbsd keyword.

  07 Oct 2006; Diego Pettenò <flameeyes@gentoo.org> perl-5.8.8-r2.ebuild: